--- a/components/ContactForm/ContactForm.module.css
+++ b/components/ContactForm/ContactForm.module.css
@@ -1,4 +1,44 @@
-.contactUsLabel {
-    color: white;
-    text-align: center;
+.contactUsRoot {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.contactUsContainer {
+    max-width: 800px;
+}
+
+.contactUsInputLabel {
+    color: white;
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.contactUsInput {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 16px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-family: inherit;
+}
+
+.contactUsSubmitButton {
+    padding: 12px 20px; 
+    font-size: 16px; 
+    font-weight: bold;
+    color: white; 
+    background-color: #005bb5; 
+    border: none; 
+    border-radius: 8px;
+    cursor: pointer; 
+    transition: all 0.3s ease; 
+  }
+  
+  .contactUsSubmitButton:hover {
+    background-color: #005bb5; 
+    transform: scale(1.05);
+  }
+  
