--- a/pages/Home.module.css
+++ b/pages/Home.module.css
@@ -9,7 +9,7 @@
 }
 
 .welcomeContainer {
-    padding: 1.5rem
+    padding: 5rem
 }
 
 .welcomeTitle {
@@ -21,6 +21,7 @@
 .welcomeDescription {
     font-size: 1rem;
     color: white;
+    margin-top: 1rem;
 }
 
 .body {
