--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,3 +6,7 @@ body {
     padding: 0;
     margin: 0;
 }
+
+html {
+    scroll-behavior: smooth;
+  }
